--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
     <p id="demo"></p>
 
     <script src="script.js"></script>
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
 </body>
 </html>
