--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
 
     <script src="script.js"></script>
     <!-- <script src="app.js"></script> -->
+     <script src="calc.js"></script>
 </body>
 </html>
